[package]
name = "barbados"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.7.1"
# TODO: we could eventually use `futures_util::future::CatchUnwind`
# futures-util = { version = "0.3.24", default-features = false }
tokio = { version = "1.20.1", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "time"] }
